--- a/case-details.html
+++ b/case-details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expert Edge</title>
+    <title>Gratech - IT Service HTML Template</title>
     <!-- Favicon img -->
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <!-- Bootstarp min css -->
@@ -214,7 +214,7 @@
             <li class="py-2"><i class="fa-solid primary-color fa-phone-volume"></i> <a
                     href="tel:+208-6666-0112">+208-6666-0112</a>
             </li>
-            <li><i class="fa-solid primary-color fa-paper-plane"></i> <a href="#0">expertsedge@gmail.com</a></li>
+            <li><i class="fa-solid primary-color fa-paper-plane"></i> <a href="#0">info@example.com</a></li>
         </ul>
         <div class="social-icon mt-20">
             <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
@@ -255,151 +255,86 @@
                 <img class="sway__animationX" src="assets/images/banner/inner-banner-shape3.png" alt="shape">
             </div>
             <div class="container">
-                <h2 class="wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Team Details</h2>
+                <h2 class="wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">Case Study Details</h2>
                 <div class="breadcrumb-list wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                    <a href="index.html">Home</a><span><i class="fa-regular fa-angles-right mx-2"></i>Team
+                    <a href="index.html">Home</a><span><i class="fa-regular fa-angles-right mx-2"></i>Case Study
                         Details</span>
                 </div>
             </div>
         </section>
         <!-- Page banner area end here -->
 
-        <!-- Team single area start here -->
-        <section class="team-single pt-120 pb-120">
+        <!-- Case area start here -->
+        <section class="case-single-area pt-120 pb-120">
             <div class="container">
-                <div class="row g-4 align-items-center">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="team-single__image">
-                            <img src="assets/images/team/team-image1.jpg" alt="image">
-                            <div class="team-info">
-                                <a href="#0"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#0" class="active"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#0"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#0"><i class="fa-brands fa-pinterest-p"></i></a>
-                            </div>
-                        </div>
+                <div class="case-single__item">
+                    <div class="image">
+                        <img src="assets/images/case/case-details-image1.jpg" alt="image">
                     </div>
-                    <div class="col-lg-8">
-                        <div class="team-single__content">
-                            <div class="title pb-20 mb-20 bor-bottom">
-                                <h3>Kawser Ahmed</h3>
-                                <span class="primary-color mt-1">Web Designer</span>
-                            </div>
-                            <div class="team-single__info">
-                                <h4 class="pb-2">About Me</h4>
-                                <p class="mb-20">This good man possesses qualities that inspire us all. He is selfless,
-                                    always putting
-                                    the needs of others before his
-                                    own. Whether it's helping a neighbor in distress, volunteering at local charities,
-                                    or simply lending a listening ear to
-                                    those who need it, he consistently demonstrates the true meaning of altruism.
-                                </p>
-                                <p>This good man is a source of unwavering support and
-                                    encouragement to those around
-                                    him. He is a pillar of strength in
-                                    times of adversity and a wellspring of joy in times of celebration.
-                                </p>
-                                <div class="skills mt-40">
-                                    <div class="row g-4">
-                                        <div class="col-md-6">
-                                            <div class="experience-progress-wrapper">
-                                                <div class="experience-progress pb-4">
-                                                    <div
-                                                        class="experience-title-wrapper d-flex align-items-center justify-content-between">
-                                                        <h5 class="experience-title pb-2">IT Management</h5>
-                                                        <span class="exp" style="left:90%">90%</span>
-                                                    </div>
-                                                    <div class="progress">
-                                                        <div class="progress-bar wow slideInLeft"
-                                                            data-wow-duration=".8s" role="progressbar"
-                                                            style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="experience-progress pb-4">
-                                                    <div
-                                                        class="experience-title-wrapper d-flex justify-content-between align-items-center">
-                                                        <h5 class="experience-title pb-2">Network Security</h5>
-                                                        <span style="left:85%">85%</span>
-                                                    </div>
-                                                    <div class="progress">
-                                                        <div class="progress-bar wow slideInLeft"
-                                                            data-wow-duration=".9s" role="progressbar"
-                                                            style="width: 85%;" aria-valuenow="95" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="experience-progress-wrapper">
-                                                <div class="experience-progress pb-4">
-                                                    <div
-                                                        class="experience-title-wrapper d-flex align-items-center justify-content-between">
-                                                        <h5 class="experience-title pb-2">Web Development</h5>
-                                                        <span class="exp" style="left:95%">95%</span>
-                                                    </div>
-                                                    <div class="progress">
-                                                        <div class="progress-bar wow slideInLeft"
-                                                            data-wow-duration=".8s" role="progressbar"
-                                                            style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
-                                                <div class="experience-progress pb-4">
-                                                    <div
-                                                        class="experience-title-wrapper d-flex justify-content-between align-items-center">
-                                                        <h5 class="experience-title pb-2">Platform Integration</h5>
-                                                        <span style="left:98%">98%</span>
-                                                    </div>
-                                                    <div class="progress">
-                                                        <div class="progress-bar wow slideInLeft"
-                                                            data-wow-duration=".9s" role="progressbar"
-                                                            style="width: 98%;" aria-valuenow="98" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <h3 class="case-single__title mt-40 mb-30">Mobile App Development Solution</h3>
+                    <p>Nulla faucibus malesuada. In placerat feugiat eros ac tempor. Integer euismod massa sapien, et
+                        consequat enim laoreet
+                        et. Nulla sit amet nisi dapibus, gravida turpis sit amet, accumsan nisl. Fusce vel semper risus.
+                        Morbi congue eros
+                        sagittis, sodales turpis venenatis, iaculis dui. Proin ac purus sed nibh dapibus neque.
+                        scelerisque sed quis ante.
+                        Suspendisse potenti. Mauris vitae sagittis diam. Vivamus imperdiet nulla ut nisi fermentum,
+                        vitae euismod mi
+                        egestas. In
+                        quis auctor magna. Maecenas sodales nunc tellus, non iaculis est iaculis placerat. Morbi
+                        suscipit,</p>
+                    <ul class="case-date py-4 bor-top bor-bottom mt-40">
+                        <li><span>Completed Date:</span> 23-12-2023</li>
+                        <li><span>Category:</span> Technology</li>
+                        <li><span>Client:</span> Robert Fox</li>
+                        <li><span>Location:</span> fot kde, USA</li>
+                    </ul>
+                    <h3 class="case-single__title mt-40 mb-30">Our Challenge</h3>
+                    <p>Pellentesque egestas rutrum nibh facilisis ultrices. Phasellus in magna ut orci malesuada
+                        sollicitudin. Aenean faucibus
+                        scelerisque convallis. Quisque interdum mauris id nunc molestie, ac tincidunt erat gravida.
+                        Nullam dui libero, mollis ac
+                        quam et, venenatis tincidunt quam. Proin nec volutpat ligula, id porttitor augue. Proin id
+                        volutpat massa. Vivamus
+                        tincidunt nunc justo, ac aliquam ex molestie id.</p>
+                    <div class="case-challenge-list mt-30">
+                        <ul class="case-challenge">
+                            <li class="mb-3"><i class="fa-solid fa-check"></i>Technology Consultancy</li>
+                            <li><i class="fa-solid fa-check"></i>Maintenance And Support</li>
+                        </ul>
+                        <ul class="case-challenge">
+                            <li class="mb-3"><i class="fa-solid fa-check"></i>We Provide best services</li>
+                            <li><i class="fa-solid fa-check"></i>Requirements Gathering</li>
+                        </ul>
+                        <ul class="case-challenge">
+                            <li class="mb-3"><i class="fa-solid fa-check"></i>Maintenance And Support</li>
+                            <li><i class="fa-solid fa-check"></i>Technology Consultancy</li>
+                        </ul>
                     </div>
+                    <h3 class="case-single__title mt-40 mb-30">Project Overview</h3>
+                    <p>Pellentesque egestas rutrum nibh facilisis ultrices. Phasellus in magna ut orci malesuada
+                        sollicitudin. Aenean faucibus
+                        scelerisque convallis. Quisque interdum mauris id nunc molestie, ac tincidunt erat gravida.
+                        Nullam dui libero, mollis ac
+                        quam et, venenatis tincidunt quam. Proin nec volutpat ligula, id porttitor augue. Proin id
+                        volutpat massa. Vivamus
+                        tincidunt nunc justo, ac aliquam ex molestie id.</p>
                 </div>
-            </div>
-            <div class="team-single-history mt-60">
-                <div class="container">
-                    <div class="title pb-30 mb-30 bor-bottom">
-                        <h3>Education Background</h3>
+                <div class="row g-4 mt-10">
+                    <div class="col-md-6">
+                        <div class="image">
+                            <img src="assets/images/case/case-details-image2.jpg" alt="image">
+                        </div>
                     </div>
-                    <h4><span class="primary-color text-capitalize mb-3">Bachelor's degree</span>, 2010</h4>
-                    <p>Proin ultricies ultricies est vitae cursus. Nulla sit amet suscipit tortor. Maecenas dui erat,
-                        ornare
-                        eget tristique
-                        vitae, rutrum pretium justo. Phasellus vitae consequat nisi, quis luctus nisl. Praesent faucibus
-                        sem
-                        id massa semper
-                        ornare. Nam eu magna at mi pellentesque mattis. Morbi at condimentum velit. Phasellus aliquet,
-                        leo
-                        auctor volutpat
-                        ultrices, metus dolor dictum enim, sed convallis lacus urna nec erat.</p>
-                    <h4><span class="primary-color text-capitalize mb-3 mt-5">Master's degree in design</span>, 2015
-                    </h4>
-                    <p>Proin ultricies ultricies est vitae cursus. Nulla sit amet suscipit tortor. Maecenas dui erat,
-                        ornare
-                        eget tristique
-                        vitae, rutrum pretium justo. Phasellus vitae consequat nisi, quis luctus nisl. Praesent faucibus
-                        sem
-                        id massa semper
-                        ornare. Nam eu magna at mi pellentesque mattis. Morbi at condimentum velit. Phasellus aliquet,
-                        leo
-                        auctor volutpat
-                        ultrices, metus dolor dictum enim, sed convallis lacus urna nec erat.</p>
+                    <div class="col-md-6">
+                        <div class="image">
+                            <img src="assets/images/case/case-details-image3.jpg" alt="image">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- Team single area end here -->
+        <!-- Case area end here -->
     </main>
 
     <!-- Footer area start here -->
